[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = true, features = ["napi4","async","tokio_rt","serde-json","napi1"] }
napi-derive = "2.12.2"
tikv-client = "0.2.0"
serde_json = "1.0.1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.18.0"
log = "0.4.17"   # for logger
log4rs = { version ="1.0.0", features = ["gzip"] }
config = "0.13.2"   #for config
lazy_static = "1.4"  #static declaration
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
uuid = { version = "1.9.1", features = ["v4"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
